# YAESandBox

./: .gitignore  Directory.Build.props  Directory.Build.targets  LICENSE  README.md  README_FrontEnd.md  README_WebSocket.md  README_Workflow.md  YAESandBox.sln  ai_service.py  command.txt  command_processor.py  commit_history.txt  commit_history_full.txt  game_state.py  main.py  main_gui.py  my_rpg_save.json  oldPrompts  parser.py  prompts.py  simple_deepseek_concurrency_test.py  simple_deepseek_concurrency_test_raw_http.py  swagger.json  user_commands.py  websocket_test.html  world_state.py
Plugins/: .gitignore  Directory.Build.props  Directory.Build.targets
YAESandBox.API/: Program.cs  YAESandBox.API.csproj  YAESandBox.API.http  eraSandBoxAPI.http
YAESandBox.API.SignalR/: Class1.cs
YAESandBox.Core/: Class1.cs  Mapper.cs  Save.Dto.cs  Save.cs  YAESandBox.Core.csproj
YAESandBox.Core.Block/: Block.cs  BlockManager.cs  BlockManagerHasStateTransition.cs  BlockStatus.cs  Mapper.cs  YAESandBox.Core.Block.csproj
YAESandBox.Tests/: BlockConflictResolutionTests.cs  BlockConflictResolutionTests2.cs  BlockManagerModificationTests.cs  BlockManagerPersistenceTests.cs  BlockManagerTest2.cs  BlockManagerTests.cs  BlockStatusTests.cs  BlockTests.cs  EntityTests.cs  GameStateTests.cs  OperatorHelperTests.cs  YAESandBox.Tests.csproj
YAESandBox.WorkFlow/: IWorkflowService.cs  WorkflowService.cs  YAESandBox.WorkFlow.csproj
_python_legacy/: run_api.py
api/: dependencies.py  dtos.py  main.py  websocket_manager.py
backend/: .editorconfig  Directory.Build.props  Directory.Packages.props  YAESandBox.sln  YAESandBox.slnx  licenses.json
build-assets/: afterPack.js
core/: ai_service.py  block.py  command_processor.py  concurrent_stream_demo.py  game_state.py  parser.py  prompts.py  world_state.py
docs/: websocket_protocol.md
frontend/: .depcheckrc.json  .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  auto-imports.d.ts  components.d.ts  index.html  package-lock.json  package.json  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.base.json  tsconfig.json  tsconfig.node.base.json  tsconfig.node.json  vite.config.shared.ts  vite.config.ts
frontend/apps/launcher/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/apps/launcher/src-tauri/capabilities/: default.json
frontend/apps/launcher/src-tauri/src/: commands.rs  core.rs  lib.rs  main.rs
frontend/apps/launcher/src-tauri/src/commands/: config_cmd.rs  download.rs  fs_utils.rs  log_cmd.rs  manifest.rs  mod.rs  plugin_cmd.rs  process.rs  restart_application.rs  unzip.rs  update_manager.rs  updater_cmd.rs
frontend/apps/launcher/src-tauri/src/core/: config.rs  config_parser.rs  dialog_window.rs  http.rs  job_object.rs  mod.rs  ownership.rs
gui/: entity_inspector_widget.py  main_window.py  narrative_widget.py
my_little_tooly/: update_file_headers.py
processing/: command_processor.py  parser.py  translator.py
scripts/: get_all_release.py  release_helper.py  tree_generator.py
(+1638 files in other folders)
