[package]
name = "yaesandbox-launcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["creeperoffire"]
edition = "2021"

# 更多配置项请参考 https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# _lib 后缀看似多余，但对于确保库名称唯一且不与二进制文件名冲突是必要的。
# 这似乎只是 Windows 上的一个问题，详见 https://github.com/rust-lang/cargo/issues/8519
name = "yaesandbox_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
zip = "4.5.0"
portpicker = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_System_JobObjects",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security"
] }

[features]
# 这个特性用于生产构建，或当 devPath 指向文件系统时
# 请勿移除!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# "z" 代表优化体积而不是速度。 "s" 是次一级优化体积。
opt-level = "z"
# 链接时优化，允许编译器在整个程序级别进行优化。
lto = true
# 将所有代码编译成一个单元，增加编译时间但能带来更好的优化。
codegen-units = 1
# 发生panic时直接终止程序，而不是展开堆栈，可以减小体积。
panic = "abort"
# 自动剥离符号信息，显著减小二进制文件大小。
strip = true
